NEON-580 Fixing some timeline spacing issues

--- a/widgets/charts/src/main/webapp/css/barchart.css
+++ b/widgets/charts/src/main/webapp/css/barchart.css
@@ -58,16 +58,15 @@
 }
 
 .chart-container {
-    width: 90%;
+    width: 95%;
     height: 100%;
-    position: absolute;
     top: 20px;
     left: 20px;
 }
 
 .timeline-div{
     width:90%;
-    height:100%;
+    height:95%;
 }
 
 .chart-div{
@@ -80,6 +79,6 @@
 }
 
 #options-bar {
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 60px;
 }
